--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <div class="card">
                 <input type="checkbox" name="" id="task1" class="card-checkbox">
                 <label for="task1" class="card-label">Olá mundo</label>
-                <button class="card-remove-task" onclick="alert('Olá');"></button>
+                <button class="card-remove-task"></button>
             </div>
 
             <div class="card">
                 <input type="checkbox" name="" id="task2" class="card-checkbox">
                 <label for="task2" class="card-label">Tchau mundo</label>
-                <button class="card-remove-task" onclick="alert('Olá');"></button>
+                <button class="card-remove-task"></button>
             </div>
             
         </main>
@@ -46,6 +46,7 @@
     </footer>
 
     <script src="./src/scripts/header.js"></script>
+    <script src="./src/scripts/mainContent.js"></script>
     <script src="./src/scripts/footer.js"></script>
 
 </body>
