Começando a reescrever para JavaScript

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoyasumii's To Do</title>
-    <link rel="shortcut icon" href="./src/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./src/styles/mainStyle.css">
-    <link rel="stylesheet" href="./src/styles/footerStyle.css">
-    <link rel="stylesheet" href="./src/styles/mainContentStyle.css">
+    <link rel="shortcut icon" href="./wwwroot/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./wwwroot/styles/mainStyle.css">
+    <link rel="stylesheet" href="./wwwroot/styles/footerStyle.css">
+    <link rel="stylesheet" href="./wwwroot/styles/mainContentStyle.css">
 </head>
 <body>
 
@@ -45,9 +45,11 @@
 
     </footer>
 
-    <script src="./src/scripts/header.js"></script>
-    <script src="./src/scripts/mainContent.js"></script>
-    <script src="./src/scripts/footer.js"></script>
+    <script src="./wwwroot/scripts/header.js"></script>
+    <script src="./wwwroot/scripts/mainContent.js"></script>
+    <script src="./wwwroot/scripts/footer.js"></script>
+
+    <script src="./wwwroot/scripts/applicationFunctions.js"></script>
 
 </body>
 </html>
